adding inference without json

--- a/Colab-mmdetection.ipynb
+++ b/Colab-mmdetection.ipynb
@@ -49,7 +49,8 @@
       },
       "source": [
         "#@title install\n",
-        "# install dependencies: (use cu101 because colab has CUDA 10.1)\n",
+        "# install dependencies:\n",
+        "# currently mmcv does not support 1.9\n",
         "!pip install torch==1.8.0+cu111 torchvision==0.9.0+cu111 torchaudio==0.8.0 -f https://download.pytorch.org/whl/torch_stable.html\n",
         "\n",
         "# install mmcv-full thus we could use CUDA operators\n",
@@ -82,8 +83,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PBA4OIhyo1Na",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "PBA4OIhyo1Na"
       },
       "source": [
         "#@title coco.py (config classes)\n",
@@ -901,6 +902,7 @@
         "id": "QNRy702z3g05"
       },
       "source": [
+        "#@title detection with metrics (requires json file)\n",
         "%cd /content/mmdetection\n",
         "!python tools/test.py \\\n",
         "    /content/test.py \\\n",
@@ -914,13 +916,97 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2mdVMfg15SAf",
+        "id": "uj1pjhvXlqvv",
         "cellView": "form"
       },
       "source": [
-        "#@title show one example\n",
-        "from IPython.display import Image\n",
-        "Image('/content/mmdetection/work_dirs/mask_rcnn_r50_fpn_2x_coco/test.jpg')"
+        "#@title create boolean masks / create masked images (does not require json)\n",
+        "%cd /content/mmdetection\n",
+        "from mmdet.apis import single_gpu_test\n",
+        "from mmdet.models import build_detector\n",
+        "from mmcv.runner import wrap_fp16_model\n",
+        "from mmcv import Config\n",
+        "import mmcv\n",
+        "\n",
+        "import numpy as np\n",
+        "import glob\n",
+        "from tqdm import tqdm\n",
+        "import torch\n",
+        "import cv2\n",
+        "import os\n",
+        "\n",
+        "# dont print deprication warnings\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "fp16_cfg = True\n",
+        "confidence = 0.6\n",
+        "config_path = \"/content/drive/MyDrive/mmdetection/mask_rcnn_r50_fpn_2x_coco/mask_rcnn_r50_fpn_2x_coco.py\" #@param\n",
+        "model_path = \"/content/drive/MyDrive/mmdetection/mask_rcnn_r50_fpn_2x_coco/epoch_3.pth\" #@param\n",
+        "folder_path = \"/content/input/\" #@param\n",
+        "output_path = \"/content/output\" #@param\n",
+        "\n",
+        "# detect all files from input folder\n",
+        "files = glob.glob(folder_path + '/**/*.png', recursive=True)\n",
+        "files_jpg = glob.glob(folder_path + '/**/*.jpg', recursive=True)\n",
+        "files.extend(files_jpg)\n",
+        "\n",
+        "# build the model\n",
+        "cfg = Config.fromfile(config_path)\n",
+        "model = build_detector(cfg.model)\n",
+        "\n",
+        "# load state dict into model\n",
+        "x = torch.load(model_path)\n",
+        "model.load_state_dict(x['state_dict'])\n",
+        "\n",
+        "for i in tqdm(files):\n",
+        "  image = cv2.imread(i, cv2.IMREAD_COLOR)\n",
+        "  input = torch.from_numpy(image).unsqueeze(0).permute(0,3,1,2)/255\n",
+        "\n",
+        "  if fp16_cfg == True:\n",
+        "      wrap_fp16_model(model)\n",
+        "      model.half()\n",
+        "      input = input.type(torch.HalfTensor)\n",
+        "\n",
+        "  # move to device\n",
+        "  device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "  model = model.to(device)\n",
+        "  input = input.to(device)\n",
+        "  model.eval()\n",
+        "\n",
+        "  img_metas = {}\n",
+        "  img_metas['filename'] = i\n",
+        "  img_metas['ori_shape'] = image.shape\n",
+        "  img_metas['img_shape'] = image.shape\n",
+        "  img_metas['scale_factor'] = np.array([1., 1., 1., 1.])\n",
+        "\n",
+        "  with torch.no_grad():\n",
+        "  #with torch.inference_mode(): # torch 1.9\n",
+        "    result = model.simple_test(input, [img_metas], rescale=None)\n",
+        "\n",
+        "  # creating mask from detection\n",
+        "  counter = 0\n",
+        "  mask = np.zeros((image.shape[0], image.shape[1])).astype(bool)\n",
+        "\n",
+        "  # bar\n",
+        "  for f in result[0][0][0]:\n",
+        "    if f[4] > confidence:\n",
+        "      mask = mask | result[0][1][0][counter]\n",
+        "      counter += 1\n",
+        "\n",
+        "  counter = 0\n",
+        "  # mosaic\n",
+        "  for f in result[0][0][1]:\n",
+        "    if f[4] > confidence:\n",
+        "      mask = mask | result[0][1][1][counter]\n",
+        "      counter += 1\n",
+        "\n",
+        "  # only save the mask\n",
+        "  #cv2.imwrite(os.path.join(output_path, os.path.splitext(os.path.basename(i))[0] + \".png\"), np.array(mask).astype(np.uint8)*255)\n",
+        "  \n",
+        "  # save with image\n",
+        "  image[mask]= [0, 255, 0]\n",
+        "  cv2.imwrite(os.path.join(output_path, os.path.splitext(os.path.basename(i))[0] + \".png\"), np.array(image).astype(np.uint8))"
       ],
       "execution_count": null,
       "outputs": []
