updating dependencies, adding timm info

--- a/Colab-mmdetection.ipynb
+++ b/Colab-mmdetection.ipynb
@@ -52,6 +52,10 @@
         "# install dependencies:\n",
         "# currently mmcv does not support 1.9\n",
         "!pip install torch==1.8.0+cu111 torchvision==0.9.0+cu111 torchaudio==0.8.0 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "!pip install timm # custom backbones\n",
+        "\n",
+        "# needed for training\n",
+        "!pip install \"git+https://github.com/open-mmlab/cocoapi.git#subdirectory=pycocotools\"\n",
         "\n",
         "# install mmcv-full thus we could use CUDA operators\n",
         "#!pip install mmcv-full\n",
@@ -62,7 +66,7 @@
         "!git clone https://github.com/open-mmlab/mmdetection.git\n",
         "%cd mmdetection\n",
         "\n",
-        "!pip install -e .\n",
+        "#!pip install -e .\n",
         "\n",
         "# install Pillow 7.0.0 back in order to avoid bug in colab\n",
         "!pip install Pillow==7.0.0"
@@ -83,8 +87,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "PBA4OIhyo1Na"
+        "id": "PBA4OIhyo1Na",
+        "cellView": "form"
       },
       "source": [
         "#@title coco.py (config classes)\n",
@@ -642,8 +646,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "yf_LxeMHpJuE"
+        "id": "yf_LxeMHpJuE",
+        "cellView": "form"
       },
       "source": [
         "#@title mask_rcnn_r50_fpn.py (config classes)\n",
@@ -779,8 +783,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "zl8PeWHRtZuI"
+        "id": "zl8PeWHRtZuI",
+        "cellView": "form"
       },
       "source": [
         "#@title coco_instance.py (config paths)\n",
@@ -836,6 +840,32 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S2tc-IJQ-uBT"
+      },
+      "source": [
+        "Usage of timm:\n",
+        "\n",
+        "To print all models:\n",
+        "```\n",
+        "import timm\n",
+        "from pprint import pprint\n",
+        "model_names = timm.list_models(pretrained=True)\n",
+        "pprint(model_names)\n",
+        "```\n",
+        "\n",
+        "Config file:\n",
+        "```\n",
+        "  backbone=dict(\n",
+        "      type='timm',\n",
+        "      num_classes=4,\n",
+        "      model_name=\"tf_efficientnetv2_s\"\n",
+        "      ),\n",
+        "```"
+      ]
     },
     {
       "cell_type": "markdown",
