adding timm feature shape print info to colab

--- a/Colab-mmdetection.ipynb
+++ b/Colab-mmdetection.ipynb
@@ -864,6 +864,16 @@
         "      num_classes=4,\n",
         "      model_name=\"tf_efficientnetv2_s\"\n",
         "      ),\n",
+        "```\n",
+        "\n",
+        "To get the output shapes (in_channels for neck)\n",
+        "```\n",
+        "import torch\n",
+        "import timm\n",
+        "m = timm.create_model('resnest26d', features_only=True, pretrained=True)\n",
+        "o = m(torch.randn(2, 3, 224, 224))\n",
+        "for x in o:\n",
+        "  print(x.shape)\n",
         "```"
       ]
     },
